# curlWebRequest

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/curl/project/web/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jsoncpp.cpp  unity.cpp  web.cpp
app/src/main/cpp/include/: unity.h  web.h
app/src/main/java/com/curl/project/web/: BaseData.kt  MainActivity.kt  NetWorkException.kt  WebUnity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/curl/project/web/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
